[FIX] Update documentation to reflect that accrual reporting happens
Older versions of the integration instead reported to Avalara on a
cash basis, but this version does so on an accrual basis.

--- a/avatax_connector/static/description/index.html
+++ b/avatax_connector/static/description/index.html
@@ -363,8 +363,8 @@ select the desired Tax Exempt Code from the dropdown menu.
                 <p>
 The AvaTax module is integrated into Customer Invoices and is applied to each 
 transaction. The transaction log in the Avatax dashboard shows the invoice details and 
-displays whether the transaction is in an uncommitted or committed status. A validated 
-invoice will show an <b>Uncommitted</b> status and a paid invoice will show a <b>Committed</b> 
+displays whether the transaction is in an uncommitted or committed status. A draft
+invoice will have an <b>Uncommitted</b> status and a validated invoice will have a <b>Committed</b>
 status.
 <p>The module will check if there is a selected warehouse and will automatically 
 determine the address of the warehouse and the origin location. If no address is 
