Support for Odoo Community Edition

--- a/avatax_connector/static/description/index.html
+++ b/avatax_connector/static/description/index.html
@@ -58,7 +58,7 @@
         <div class="oe_span6">
             <p>
                 <ul type="disc">
-                    <li>Navigate to: Accounting -> Configuration -> AvaTax -> AvaTax API</li>
+		    <li>Navigate to: Accounting or Invoicing App >> Configuration >> AvaTax >> AvaTax API</li>
                     <li>Click the <b>Create</b> button.</li>
                     <li>Uncheck the <b>Disable AvaTax Calculation</b> box</li>
                     <li>Fill out the form with your Company Code, Account Number, and License Key as provided with your Avalara account</li>
@@ -119,9 +119,13 @@
             <p class='oe_mt32'>
                 <h4><b>Configure Exemption Codes</b></h4>
                 <p>
-                    Exemption codes are allowed for users where they may apply (ex. Government entities). Navigate to: Accounting >> Configuration >> AvaTax >> Exemption Code 
-				<p>
-					The module is installed with 16 predefined exemption codes. You can add, remove, and modify exemption codes.
+                    Exemption codes are allowed for users where they may apply (ex. Government entities). 
+		    Navigate to: Accounting or Invoicing App >> Configuration >> AvaTax >> Exemption Code 
+		</p>
+		<p>
+		The module is installed with 16 predefined exemption codes. You can add, remove, and modify exemption codes.
+		</p>
+	    </p>
         </div>
 	</div>
 </section>
@@ -131,9 +135,13 @@
             <p class='oe_mt32'>
                 <h4><b>Product Tax Codes</b></h4>
                 <p>
-					Create product tax codes to assign to products and/or product categories. Navigate to: Accounting >> Configuration >> AvaTax >> Product Tax Codes 
-				<p>
-					From here you can add, remove, and modify the product tax codes.
+		Create product tax codes to assign to products and/or product categories. 
+		Navigate to: Accounting or Invoicing App >> Configuration >> AvaTax >> Product Tax Codes 
+		</p>
+		<p>
+		From here you can add, remove, and modify the product tax codes.
+		</p>
+	    </p>
         </div>
         <div class="oe_span6">
             <img class="oe_picture oe_screenshot" src="ATC5.png">
@@ -159,11 +167,12 @@
             <p class='oe_mt32'>
                 <h4><b>Configure AVATAX Tax Type</b></h4>
                 <ul type="disc">
-                    <li>Navigate to: Accounting >> Configuration >> Accounting >> Taxes</li>
+                    <li>Navigate to: Accounting or Invoicing App >> Configuration >> Accounting >> Taxes</li>
                     <li>Select AVATAX from the list view (automatically added on module install).</li>
                     <li>Click the <b>Edit</b> button to configure the AVATAX Tax Type with the proper tax account configuration for your system.</li>
                 </ul>
-                <b>Note: </b>Upon initial install the settings will be blank. The image shows the demo configuration.
+                <b>Note:</b> Upon initial install the settings will be blank. The image shows the demo configuration.
+	    </p>
         </div>
 
     </div>
@@ -384,7 +393,7 @@
             <p class='oe_mt32'>
                 <h4><b>Create New Customer Invoice</b></h4>
                 <ul type="disc">
-                    <li>Navigate to: Accounting >> Customers >> Invoices.</li>
+                    <li>Navigate to: Accounting or Invoicing >> Customers >> Invoices.</li>
                     <li>Click <b>Create</b> button.</li>
         </div>
         <div class="oe_span6">
@@ -446,7 +455,7 @@
                 <h4><b>Initiate Customer Refund</b></h4>
 
                 <ul type="disc">
-                    <li>Navigate to: Accounting >> Customers >> Invoices</li>
+                    <li>Navigate to: Accounting or Invoicing >> Customers >> Invoices</li>
                     <li>Select the invoice you wish to refund</li>
                     <li>Click <b>Add Credit Note</b> button</li>
         </div>
