[UPD] product_configurator_mrp_quantity

--- a/product_configurator_mrp_quantity/static/description/index.html
+++ b/product_configurator_mrp_quantity/static/description/index.html
@@ -1,8 +1,8 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-            <h2 class="oe_slogan">Odoo Product Configurator</h2>
-            <h3 class="oe_slogan">Generate products on-demand, easy and error-free</h3>
+            <h2 class="oe_slogan">Odoo Product Configurator MRP Quantity</h2>
+            <h3 class="oe_slogan">Introducing dynamic quantity adjustments within the Product Configurator Wizard on-demand, easy and error-free</h3>
         </div>
         <div class="oe_span12 mt32">
             <div class="oe_centeralign oe_websiteonly">
@@ -14,10 +14,10 @@
 
 <section class="oe_container oe_dark mt64">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan">Select your template</h2>
+        <h2 class="oe_slogan">Qty Required checkbox on the product template attribute line acts as a trigger for the dynamic quantity field in the wizard </h2>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture" src="wizard-template.png">
+                <img class="oe_picture" src="Odoo-Personal-Computer1.png">
             </div>
         </div>
     </div>
@@ -25,10 +25,10 @@
 
 <section class="oe_container oe_mt64">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan">Choose your options and get live image updates</h2>
+        <h2 class="oe_slogan">By default, the quantity field displays a value of "1" which can be modified by the user during configuration</h2>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="wizard-color.png"/>
+                <img class="oe_picture oe_screenshot" src="Odoo-Product-Variant-Values.png"/>
             </div>
         </div>
     </div>
@@ -36,22 +36,10 @@
 
 <section class="oe_container oe_dark oe_mt64">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan">Custom values and multiple selections supported</h2>
+        <h2 class="oe_slogan">Select Product Template for Variant Configuration</h2>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="wizard-last-step.png"/>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="oe_container oe_dark oe_mt64">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan">The wizard is generated automatically for you!</h2>
-        <h3 class="oe_slogan">Just define the attributes and rules on the template and you are done</h3>
-        <div class="oe_span12">
-            <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="configurable-template.png"/>
+                <img class="oe_picture oe_screenshot" src="Product_Config_qty.png"/>
             </div>
         </div>
     </div>
